# elitelm

./: .gitignore  README.md  api.py  llama3-qa.py  qnn.ipynb  requirements.txt
c/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp-llm.cpp  cpp-llm.h
cpu_and_mobile/cpu-int4-rtn-block-32-acc-level-4/: config.json  genai_config.json
docs/: onnx_npu_docs.md  project_details.md
